--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,11 @@
 
 <body>
 
-  <div id="app" class="container-fluid">
+  <div id="app" class="container-lg">
     <img src="" alt="">
-    <div id="panel" class="bg-light sidebar"></div>
+    <div id="panel" class="bg-light sidebar">
+      Создай свой сайт.
+    </div>
     <div id="site" class="content">
 
 
